--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- meta -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Canvas Hero</title>
+    <head>
+        <!-- meta -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Canvas Hero</title>
 
-    <!-- styles -->
+        <!-- styles -->
+        <link href="assets/css/styles.css" rel="stylesheet">
 
-    <!-- links -->
+        <!-- links -->
 
 
-  </head>
-  <body>
-    <canvas></canvas>
-  </body>
+    </head>
+    <body>
+        <canvas></canvas>
+
+        <script src="assets\js\scripts.js"></script>
+    </body>
 </html>
