--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <body>
         <canvas></canvas>
 
+        <script src="assets/js/objects.js"></script>
+        <script src="assets/js/helpers.js"></script>
         <script src="assets\js\scripts.js"></script>
     </body>
 </html>
